--- a/pages/ui-checkbox.html
+++ b/pages/ui-checkbox.html
@@ -1,6 +1,6 @@
 <section class="intro">
   <h1>Checkbox</h1>
-  <span class="description">Checkboxes allow users to select multiple items from a list or toggle a single option on or off.</span>
+  <div class="description">Checkboxes allow users to select multiple items from a list or toggle a single option on or off.</div>
   <ui-divider></ui-divider>
   <div class="info">
     <h2>Features</h2>
@@ -27,43 +27,59 @@
 </section>
 
 <section class="content">
-  <span>Height 16.</span>
-  <div class="example">
-    <div class="preview">
-      <ui-checkbox height="16" aria-label="Settings"></ui-checkbox>
+  <div class="content-item">
+    <div>Height 16.</div>
+    <div class="example">
+      <div class="preview">
+        <ui-checkbox height="16" aria-label="Settings"></ui-checkbox>
+      </div>
+      <div class="code">
+        <code>
+          <div>&lt;ui-checkbox height="16" aria-label="Settings"&gt;&lt;/ui-checkbox&gt;</div>
+        </code>
+      </div>
     </div>
-    <code>
-      <span>&lt;ui-checkbox height="16" aria-label="Settings"&gt;&lt;/ui-checkbox&gt;</span>
-    </code>
   </div>
 
-  <span>Height 20. (default)</span>
-  <div class="example">
-    <div class="preview">
-      <ui-checkbox aria-label="Settings"></ui-checkbox>
+  <div class="content-item">
+    <div>Height 20. (default)</div>
+    <div class="example">
+      <div class="preview">
+        <ui-checkbox aria-label="Settings"></ui-checkbox>
+      </div>
+      <div class="code">
+        <code>
+          <div>&lt;ui-checkbox aria-label="Settings"&gt;&lt;/ui-checkbox&gt;</div>
+        </code>
+      </div>
     </div>
-    <code>
-      <span>&lt;ui-checkbox aria-label="Settings"&gt;&lt;/ui-checkbox&gt;</span>
-    </code>
   </div>
 
-  <span>Checked.</span>
-  <div class="example">
-    <div class="preview">
-      <ui-checkbox aria-label="Settings" checked></ui-checkbox>
+  <div class="content-item">
+    <div>Checked.</div>
+    <div class="example">
+      <div class="preview">
+        <ui-checkbox aria-label="Settings" checked></ui-checkbox>
+      </div>
+      <div class="code">
+        <code>
+          <div>&lt;ui-checkbox aria-label="Settings" checked&gt;&lt;/ui-checkbox&gt;</div>
+        </code>
+      </div>
     </div>
-    <code>
-      <span>&lt;ui-checkbox aria-label="Settings" checked&gt;&lt;/ui-checkbox&gt;</span>
-    </code>
   </div>
 
-  <span>Disabled.</span>
-  <div class="example">
-    <div class="preview">
-      <ui-checkbox disabled aria-label="Settings"></ui-checkbox>
+  <div class="content-item">
+    <div>Disabled.</div>
+    <div class="example">
+      <div class="preview">
+        <ui-checkbox disabled aria-label="Settings"></ui-checkbox>
+      </div>
+      <div class="code">
+        <code>
+          <div>&lt;ui-checkbox disabled aria-label="Settings"&gt;&lt;/ui-checkbox&gt;</div>
+        </code>
+      </div>
     </div>
-    <code>
-      <span>&lt;ui-checkbox disabled aria-label="Settings"&gt;&lt;/ui-checkbox&gt;</span>
-    </code>
   </div>
 </section>
