--- a/pages/ui-switch.html
+++ b/pages/ui-switch.html
@@ -1,6 +1,6 @@
 <section class="intro">
   <h1>Switch</h1>
-  <span class="description">Switches provide a simple and user-friendly way to toggle between two states.</span>
+  <div class="description">Switches provide a simple and user-friendly way to toggle between two states.</div>
   <ui-divider></ui-divider>
   <div class="info">
     <h2>Features</h2>
@@ -27,43 +27,60 @@
 </section>
 
 <section class="content">
-  <span>Height 16.</span>
+<div class="content-item">
+  <div>Height 16.</div>
   <div class="example">
     <div class="preview">
       <ui-switch height="16" aria-label="Settings"></ui-switch>
     </div>
-    <code>
-      <span>&lt;ui-switch height="16" aria-label="Settings"&gt;&lt;/ui-switch&gt;</span>
-    </code>
+    <div class="code">
+      <code>
+        <div>&lt;ui-switch height="16" aria-label="Settings"&gt;&lt;/ui-switch&gt;</div>
+      </code>
+    </div>
   </div>
+</div>
 
-  <span>Height 24. (default height)</span>
+<div class="content-item">
+  <div>Height 24. (default height)</div>
   <div class="example">
     <div class="preview">
       <ui-switch aria-label="Settings"></ui-switch>
     </div>
-    <code>
-      <span>&lt;ui-switch aria-label="Settings"&gt;&lt;/ui-switch&gt;</span>
-    </code>
+    <div class="code">
+      <code>
+        <div>&lt;ui-switch aria-label="Settings"&gt;&lt;/ui-switch&gt;</div>
+      </code>
+    </div>
   </div>
+</div>
 
-  <span>Checked.</span>
+<div class="content-item">
+  <div>Checked.</div>
   <div class="example">
     <div class="preview">
       <ui-switch checked aria-label="Settings"></ui-switch>
     </div>
-    <code>
-      <span>&lt;ui-switch checked aria-label="Settings"&gt;&lt;/ui-switch&gt;</span>
-    </code>
+    <div class="code">
+      <code>
+        <div>&lt;ui-switch checked aria-label="Settings"&gt;&lt;/ui-switch&gt;</div>
+      </code>
+    </div>
   </div>
+</div>
 
-  <span>Disabled.</span>
+<div class="content-item">
+  <div>Disabled.</div>
   <div class="example">
     <div class="preview">
       <ui-switch disabled aria-label="Settings"></ui-switch>
     </div>
-    <code>
-      <span>&lt;ui-switch disabled aria-label="Settings"&gt;&lt;/ui-switch&gt;</span>
-    </code>
+    <div class="code">
+      <code>
+        <div>&lt;ui-switch disabled aria-label="Settings"&gt;&lt;/ui-switch&gt;</div>
+      </code>
+    </div>
   </div>
+</div>
+
 </section>
