--- a/pages/ui-divider.html
+++ b/pages/ui-divider.html
@@ -1,11 +1,11 @@
 <section class="intro">
   <h1>Divider</h1>
-  <span class="description">A component for separating content using a line or a line with text.</span>
+  <div class="description">A component for separating content using a line or a line with text.</div>
   <ui-divider></ui-divider>
   <div class="info">
     <h2>Features</h2>
     <ul>
-      <li>Supports LTR and RTL.</li>
+      <li>Supports LTR and RTL. Default: LTR.</li>
       <li>By default, horizontal divider width is 100%.</li>
       <li>By default, vertical divider height is 100%.</li>
     </ul>
@@ -24,83 +24,115 @@
 </section>
 
 <section class="content">
-  <span>Horizontal divider. axis="x".</span>
-  <div class="example">
-    <div class="preview">
-      <ui-divider></ui-divider>
+  <div class="content-item">
+    <div>Horizontal divider. axis="x".</div>
+    <div class="example">
+      <div class="preview">
+        <ui-divider></ui-divider>
+      </div>
+      <div class="code">
+        <code>
+          <div>&lt;ui-divider&gt;&lt;/ui-divider&gt;</div>
+        </code>
+      </div>
     </div>
-    <code>
-      <span>&lt;ui-divider&gt;&lt;/ui-divider&gt;</span>
-    </code>
   </div>
 
-  <span>Text centered.</span>
-  <div class="example">
-    <div class="preview">
-      <ui-divider text="Text"></ui-divider>
+  <div class="content-item">
+    <div>Text centered.</div>
+    <div class="example">
+      <div class="preview">
+        <ui-divider text="Text"></ui-divider>
+      </div>
+      <div class="code">
+        <code>
+          <div>&lt;ui-divider text="Text"&gt;&lt;/ui-divider&gt;</div>
+        </code>
+      </div>
     </div>
-    <code>
-      <span>&lt;ui-divider text="Text"&gt;&lt;/ui-divider&gt;</span>
-    </code>
   </div>
 
-  <span>Text aligned start.</span>
-  <div class="example">
-    <div class="preview">
-      <ui-divider text="Text" text-align="start"></ui-divider>
+  <div class="content-item">
+    <div>Text aligned start.</div>
+    <div class="example">
+      <div class="preview">
+        <ui-divider text="Text" text-align="start"></ui-divider>
+      </div>
+      <div class="code">
+        <code>
+          <div>&lt;ui-divider text="Text" text-align="start"&gt;&lt;/ui-divider&gt;</div>
+        </code>
+      </div>
     </div>
-    <code>
-      <span>&lt;ui-divider text="Text" text-align="start"&gt;&lt;/ui-divider&gt;</span>
-    </code>
   </div>
 
-  <span>Text aligned end.</span>
-  <div class="example">
-    <div class="preview">
-      <ui-divider text="Text" text-align="end"></ui-divider>
+  <div class="content-item">
+    <div>Text aligned end.</div>
+    <div class="example">
+      <div class="preview">
+        <ui-divider text="Text" text-align="end"></ui-divider>
+      </div>
+      <div class="code">
+        <code>
+          <div>&lt;ui-divider text="Text" text-align="end"&gt;&lt;/ui-divider&gt;</div>
+        </code>
+      </div>
     </div>
-    <code>
-      <span>&lt;ui-divider text="Text" text-align="end"&gt;&lt;/ui-divider&gt;</span>
-    </code>
   </div>
 
-  <span>Vertical divider. axis="y".</span>
-  <div class="example">
-    <div class="preview" style="height:150px;">
-      <ui-divider axis="y"></ui-divider>
+  <div class="content-item">
+    <div>Vertical divider. axis="y".</div>
+    <div class="example">
+      <div class="preview" style="height:150px;">
+        <ui-divider axis="y"></ui-divider>
+      </div>
+      <div class="code">
+        <code>
+          <div>&lt;ui-divider axis="y"&gt;&lt;/ui-divider&gt;</div>
+        </code>
+      </div>
     </div>
-    <code>
-      <span>&lt;ui-divider axis="y"&gt;&lt;/ui-divider&gt;</span>
-    </code>
   </div>
 
-  <span>Text centered.</span>
-  <div class="example">
-    <div class="preview" style="height:150px;">
-      <ui-divider text="Text" axis="y"></ui-divider>
+  <div class="content-item">
+    <div>Text centered.</div>
+    <div class="example">
+      <div class="preview" style="height:150px;">
+        <ui-divider text="Text" axis="y"></ui-divider>
+      </div>
+      <div class="code">
+        <code>
+          <div>&lt;ui-divider text="Text" axis="y"&gt;&lt;/ui-divider&gt;</div>
+        </code>
+      </div>
     </div>
-    <code>
-      <span>&lt;ui-divider text="Text" axis="y"&gt;&lt;/ui-divider&gt;</span>
-    </code>
   </div>
 
-  <span>Text at the top.</span>
-  <div class="example">
-    <div class="preview" style="height:150px;">
-      <ui-divider text="Text" axis="y" text-align="start"></ui-divider>
+  <div class="content-item">
+    <div>Text at the top.</div>
+    <div class="example">
+      <div class="preview" style="height:150px;">
+        <ui-divider text="Text" axis="y" text-align="start"></ui-divider>
+      </div>
+      <div class="code">
+        <code>
+          <div>&lt;ui-divider text="Text" axis="y" text-align="start"&gt;&lt;/ui-divider&gt;</div>
+        </code>
+      </div>
     </div>
-    <code>
-      <span>&lt;ui-divider text="Text" axis="y" text-align="start"&gt;&lt;/ui-divider&gt;</span>
-    </code>
   </div>
 
-  <span>Text at the bottom.</span>
-  <div class="example">
-    <div class="preview" style="height:150px;">
-      <ui-divider text="Text" axis="y" text-align="end"></ui-divider>
+  <div class="content-item">
+    <div>Text at the bottom.</div>
+    <div class="example">
+      <div class="preview" style="height:150px;">
+        <ui-divider text="Text" axis="y" text-align="end"></ui-divider>
+      </div>
+      <div class="code">
+        <code>
+          <div>&lt;ui-divider text="Text" axis="y" text-align="end"&gt;&lt;/ui-divider&gt;</div>
+        </code>
+      </div>
     </div>
-    <code>
-      <span>&lt;ui-divider text="Text" axis="y" text-align="end"&gt;&lt;/ui-divider&gt;</span>
-    </code>
   </div>
 </section>
