--- a/pages/ui-focus.html
+++ b/pages/ui-focus.html
@@ -1,25 +1,34 @@
 <section class="intro">
   <h1>Focus</h1>
-  <span class="description">A utility element that captures focus without affecting layout.</span>
+  <div class="description">A utility element that captures focus without affecting layout.</div>
   <ui-divider></ui-divider>
+  <div class="info">
+    <h2>Usage Tips</h2>
+    <ul>
+      <li>Place right after <code>&lt;body&gt;</code> to absorb unintended focus.</li>
+    </ul>
+  </div>
   <div class="info">
     <h2>Features</h2>
     <ul>
       <li>Invisible, non-interactive, but focusable.</li>
       <li>Prevents unexpected focus jumps.</li>
-      <li>Place at the beginning of a document right after "body" to absorb unwanted focus.</li>
     </ul>
   </div>
 </section>
 
 <section class="content">
-  <span>Focus placement.</span>
-  <div class="example">
-    <code>
-      <span>&lt;body&gt;</span>
-      <span>&lt;ui-focus&gt;&lt;/ui-focus&gt;</span>
-      <span>...</span>
-      <span>&lt;/body&gt;</span>
-    </code>
+  <div class="content-item">
+    <div>Focus placement.</div>
+    <div class="example">
+      <div class="code">
+        <code>
+          <div>&lt;body&gt;</div>
+          <div>&lt;ui-focus&gt;&lt;/ui-focus&gt;</div>
+          <div>...</div>
+          <div>&lt;/body&gt;</div>
+        </code>
+      </div>
+    </div>
   </div>
 </section>
