--- a/pages/ui-label.html
+++ b/pages/ui-label.html
@@ -1,6 +1,6 @@
 <section class="intro">
   <h1>Label</h1>
-  <span class="description">Defines a title for a form element.</span>
+  <div class="description">Defines a title for a form element.</div>
   <ui-divider></ui-divider>
   <div class="info">
     <h2>Features</h2>
@@ -18,13 +18,31 @@
 </section>
 
 <section class="content">
-  <span>Label.</span>
-  <div class="example">
-    <div class="preview">
-      <ui-label>Label</ui-label>
+  <div class="content-item">
+    <div>Label.</div>
+    <div class="example">
+      <div class="preview">
+        <ui-label>Label</ui-label>
+      </div>
+      <div class="code">
+        <code>
+          <div>&lt;ui-label&gt;Label&lt;/ui-label&gt;</div>
+        </code>
+      </div>
     </div>
-    <code>
-      <span>&lt;ui-label&gt;Label&lt;/ui-label&gt;</span>
-    </code>
+  </div>
+
+  <div class="content-item">
+    <div>Required.</div>
+    <div class="example">
+      <div class="preview">
+        <ui-label required>Label</ui-label>
+      </div>
+      <div class="code">
+        <code>
+          <div>&lt;ui-label required&gt;Label&lt;/ui-label&gt;</div>
+        </code>
+      </div>
+    </div>
   </div>
 </section>
