--- a/pages/ui-text.html
+++ b/pages/ui-text.html
@@ -1,6 +1,6 @@
 <section class="intro">
   <h1>Text</h1>
-  <span class="description">Standardizes and ensures consistent text styling.</span>
+  <div class="description">Standardizes and ensures consistent text styling.</div>
   <ui-divider></ui-divider>
   <div class="info">
     <h2>Features</h2>
@@ -19,45 +19,62 @@
 </section>
 
 <section class="content">
-  <span>text-align="start"</span>
+<div class="content-item">
+  <div>text-align="start"</div>
   <div class="example">
     <div class="preview">
       <ui-text>Text</ui-text>
     </div>
-    <code>
-      <span>&lt;ui-text&gt;Text&lt;/ui-text&gt;</span>
-    </code>
+    <div class="code">
+      <code>
+        <div>&lt;ui-text&gt;Text&lt;/ui-text&gt;</div>
+      </code>
+    </div>
   </div>
+</div>
 
-  <span>text-align="end"</span>
+<div class="content-item">
+  <div>text-align="end"</div>
   <div class="example">
     <div class="preview">
       <ui-text text-align="end">Text</ui-text>
     </div>
-    <code>
-      <span>&lt;ui-text text-align="end"&gt;Text&lt;/ui-text&gt;</span>
-    </code>
+    <div class="code">
+      <code>
+        <div>&lt;ui-text text-align="end"&gt;Text&lt;/ui-text&gt;</div>
+      </code>
+    </div>
   </div>
+</div>
 
-  <span>text-align="center"</span>
+<div class="content-item">
+  <div>text-align="center"</div>
   <div class="example">
     <div class="preview">
       <ui-text text-align="center">Text</ui-text>
     </div>
-    <code>
-      <span>&lt;ui-text text-align="center"&gt;Text&lt;/ui-text&gt;</span>
-    </code>
+    <div class="code">
+      <code>
+        <div>&lt;ui-text text-align="center"&gt;Text&lt;/ui-text&gt;</div>
+      </code>
+    </div>
   </div>
+</div>
 
-  <span>text-align="justify"</span>
+<div class="content-item">
+  <div>text-align="justify"</div>
   <div class="example">
     <div class="preview">
       <ui-text text-align="justify">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</ui-text>
     </div>
-    <code>
-      <span>&lt;ui-text text-align="justify"&gt;Lorem Ipsum ...&lt;/ui-text&gt;</span>
-    </code>
+    <div class="code">
+      <code>
+        <div>&lt;ui-text text-align="justify"&gt;Lorem Ipsum ...&lt;/ui-text&gt;</div>
+      </code>
+    </div>
   </div>
+</div>
+
 </section>
 
 
