--- a/pages/ui-button.html
+++ b/pages/ui-button.html
@@ -24,8 +24,8 @@
         <br>The aria-label is auto-set from label (if present), but can be overridden. If there's no label, it must be set manually.</li>
       <li>icon-leading and icon-trailing - reactive, optional.
         <br>Define the icons displayed before and after the label, respectively.</li>
-      <li>height - static, optional. Default: 32.
-        <br>Component height is measured in pixels. Recommended range: 24 to 40. Even values are preferred.</li>
+      <li>height - static, optional. Default: 24.
+        <br>The component's height is measured in pixels. Recommended range: 24 to 40. Even values are preferred.</li>
       <li>disabled - reactive, optional.
         <br>Controls the disabled state of the component.</li>
       <li>loading - reactive, optional.
@@ -39,7 +39,7 @@
 <section class="content">
 
   <div class="content-item">
-    <div>Shape. (default: rounded)</div>
+    <div>Shape (default: rounded)</div>
     <div class="example">
       <div class="preview">
         <ui-button shape="rounded" label="shape=&quot;rounded&quot;"></ui-button>
@@ -57,7 +57,7 @@
   </div>
 
   <div class="content-item">
-    <div>Height 24.</div>
+    <div>Height 24</div>
     <div class="example">
       <div class="preview">
         <ui-button height="24" aria-label="Settings" icon-leading="settings"></ui-button>
@@ -73,7 +73,7 @@
   </div>
 
   <div class="content-item">
-    <div>Height 32. (default: 32)</div>
+    <div>Height: 32 (default)</div>
     <div class="example">
       <div class="preview">
         <ui-button aria-label="Settings" icon-leading="settings"></ui-button>
@@ -89,7 +89,7 @@
   </div>
 
   <div class="content-item">
-    <div>Height 40.</div>
+    <div>Height 40</div>
     <div class="example">
       <div class="preview">
         <ui-button height="40" aria-label="Settings" icon-leading="settings"></ui-button>
@@ -105,7 +105,7 @@
   </div>
 
   <div class="content-item">
-    <div>Disabled.</div>
+    <div>Disabled</div>
     <div class="example">
       <div class="preview">
         <ui-button label="Settings" disabled></ui-button>
@@ -119,7 +119,7 @@
   </div>
 
   <div class="content-item">
-    <div>Text and icon on one side.</div>
+    <div>Text and icon on one side</div>
     <div class="example">
       <div class="preview">
         <ui-button label="Settings" icon-leading="settings"></ui-button>
@@ -135,7 +135,7 @@
   </div>
 
   <div class="content-item">
-    <div>Text with icons on both sides.</div>
+    <div>Text with icons on both sides</div>
     <div class="example">
       <div class="preview">
         <ui-button label="Settings" icon-leading="settings" icon-trailing="settings"></ui-button> 
