--- a/pages/ui-divider.html
+++ b/pages/ui-divider.html
@@ -25,7 +25,7 @@
 
 <section class="content">
   <div class="content-item">
-    <div>Horizontal divider. axis="x".</div>
+    <div>Horizontal divider (axis="x")</div>
     <div class="example">
       <div class="preview">
         <ui-divider></ui-divider>
@@ -39,7 +39,7 @@
   </div>
 
   <div class="content-item">
-    <div>Text centered.</div>
+    <div>Text centered</div>
     <div class="example">
       <div class="preview">
         <ui-divider text="Text"></ui-divider>
@@ -53,7 +53,7 @@
   </div>
 
   <div class="content-item">
-    <div>Text aligned start.</div>
+    <div>Text aligned start (text-align="start")</div>
     <div class="example">
       <div class="preview">
         <ui-divider text="Text" text-align="start"></ui-divider>
@@ -67,7 +67,7 @@
   </div>
 
   <div class="content-item">
-    <div>Text aligned end.</div>
+    <div>Text aligned end (text-align="end")</div>
     <div class="example">
       <div class="preview">
         <ui-divider text="Text" text-align="end"></ui-divider>
@@ -81,9 +81,9 @@
   </div>
 
   <div class="content-item">
-    <div>Vertical divider. axis="y".</div>
+    <div>Vertical divider (axis="y")</div>
     <div class="example">
-      <div class="preview" style="height:150px;">
+      <div class="preview" style="height:200px;">
         <ui-divider axis="y"></ui-divider>
       </div>
       <div class="code">
@@ -95,9 +95,9 @@
   </div>
 
   <div class="content-item">
-    <div>Text centered.</div>
+    <div>Text centered</div>
     <div class="example">
-      <div class="preview" style="height:150px;">
+      <div class="preview" style="height:200px;">
         <ui-divider text="Text" axis="y"></ui-divider>
       </div>
       <div class="code">
@@ -109,9 +109,9 @@
   </div>
 
   <div class="content-item">
-    <div>Text at the top.</div>
+    <div>Text at the top (text-align="start")</div>
     <div class="example">
-      <div class="preview" style="height:150px;">
+      <div class="preview" style="height:200px;">
         <ui-divider text="Text" axis="y" text-align="start"></ui-divider>
       </div>
       <div class="code">
@@ -123,9 +123,9 @@
   </div>
 
   <div class="content-item">
-    <div>Text at the bottom.</div>
+    <div>Text at the bottom (text-align="end")</div>
     <div class="example">
-      <div class="preview" style="height:150px;">
+      <div class="preview" style="height:200px;">
         <ui-divider text="Text" axis="y" text-align="end"></ui-divider>
       </div>
       <div class="code">
