--- a/pages/ui-icon.html
+++ b/pages/ui-icon.html
@@ -18,7 +18,7 @@
 
 <section class="content">
   <div class="content-item">
-    <div>Icon.</div>
+    <div>Icon</div>
     <div class="example">
       <div class="preview">
         <ui-icon icon="home"></ui-icon>
