--- a/pages/ui-input.html
+++ b/pages/ui-input.html
@@ -34,7 +34,7 @@
 
 <section class="content">
   <div class="content-item">
-    <div>Shape. (default: rounded)</div>
+    <div>Shape (default: rounded)</div>
     <div class="example">
       <div class="preview">
         <ui-input shape="rounded" placeholder="shape=&quot;rounded&quot;"></ui-input>
@@ -52,7 +52,7 @@
   </div>
 
   <div class="content-item">
-    <div>Height 32. (default height)</div>
+    <div>Height 32 (default)</div>
     <div class="example">
       <div class="preview">
         <ui-input></ui-input>
@@ -66,7 +66,7 @@
   </div>
 
   <div class="content-item">
-    <div>Height 40.</div>
+    <div>Height 40</div>
     <div class="example">
       <div class="preview">
         <ui-input height="40"></ui-input>
@@ -80,7 +80,7 @@
   </div>
 
   <div class="content-item">
-    <div>Disabled.</div>
+    <div>Disabled</div>
     <div class="example">
       <div class="preview">
         <ui-input disabled></ui-input>
@@ -94,7 +94,7 @@
   </div>
 
   <div class="content-item">
-    <div>Input with clear button.</div>
+    <div>Input with clear button</div>
     <div class="example">
       <div class="preview">
         <ui-input clearable></ui-input>
@@ -108,7 +108,7 @@
   </div>
 
   <div class="content-item">
-    <div>Input with placeholder.</div>
+    <div>Input with placeholder</div>
     <div class="example">
       <div class="preview">
         <ui-input placeholder="Search" clearable></ui-input>
@@ -122,7 +122,7 @@
   </div>
 
   <div class="content-item">
-    <div>Input with icon.</div>
+    <div>Input with icon</div>
     <div class="example">
       <div class="preview">
         <ui-input placeholder="Search" icon-leading="search" clearable></ui-input>
@@ -136,7 +136,7 @@
   </div>
 
   <div class="content-item">
-    <div>Error.</div>
+    <div>Error</div>
     <div class="example">
       <div class="preview">
         <ui-input error></ui-input>
@@ -150,7 +150,7 @@
   </div>
 
   <div class="content-item">
-    <div>Success.</div>
+    <div>Success</div>
     <div class="example">
       <div class="preview">
         <ui-input valid></ui-input>
@@ -164,7 +164,7 @@
   </div>
 
   <div class="content-item">
-    <div>Warning.</div>
+    <div>Warning</div>
     <div class="example">
       <div class="preview">
         <ui-input warning></ui-input>
