--- a/pages/ui-label.html
+++ b/pages/ui-label.html
@@ -19,7 +19,7 @@
 
 <section class="content">
   <div class="content-item">
-    <div>Label.</div>
+    <div>Label</div>
     <div class="example">
       <div class="preview">
         <ui-label>Label</ui-label>
@@ -33,7 +33,7 @@
   </div>
 
   <div class="content-item">
-    <div>Required.</div>
+    <div>Required</div>
     <div class="example">
       <div class="preview">
         <ui-label required>Label</ui-label>
