--- a/pages/ui-spinner.html
+++ b/pages/ui-spinner.html
@@ -1,18 +1,18 @@
 <section class="intro">
   <h1>Spinner</h1>
-  <div class="description">A visual indicator that signals loading or processing.</div>
+  <div class="description">A visual indicator of loading or processing.</div>
   <ui-divider></ui-divider>
   <div class="info">
     <h2>Features</h2>
     <ul>
-      <li>.</li>
+      <li>The spinner is already animated.</li>
     </ul>
   </div>
   <div class="info">
     <h2>Attributes</h2>
     <ul>
       <li>height - static, optional. Default: 24.
-        <br>Component height is measured in pixels. Recommended range: 24 to 40. Even values are preferred.</li>
+        <br>The component's height is measured in pixels. Recommended range: 24 to 40. Even values are preferred.</li>
     </ul>
   </div>
 </section>
@@ -20,7 +20,7 @@
 <section class="content">
 
   <div class="content-item">
-    <div>Spinner. Default: 24px.</div>
+    <div>Default height</div>
     <div class="example">
       <div class="preview">
         <ui-spinner></ui-spinner>
