--- a/pages/ui-switch.html
+++ b/pages/ui-switch.html
@@ -27,60 +27,59 @@
 </section>
 
 <section class="content">
-<div class="content-item">
-  <div>Height 16.</div>
-  <div class="example">
-    <div class="preview">
-      <ui-switch height="16" aria-label="Settings"></ui-switch>
-    </div>
-    <div class="code">
-      <code>
-        <div>&lt;ui-switch height="16" aria-label="Settings"&gt;&lt;/ui-switch&gt;</div>
-      </code>
-    </div>
-  </div>
-</div>
-
-<div class="content-item">
-  <div>Height 24. (default height)</div>
-  <div class="example">
-    <div class="preview">
-      <ui-switch aria-label="Settings"></ui-switch>
-    </div>
-    <div class="code">
-      <code>
-        <div>&lt;ui-switch aria-label="Settings"&gt;&lt;/ui-switch&gt;</div>
-      </code>
+  <div class="content-item">
+    <div>Height 16</div>
+    <div class="example">
+      <div class="preview">
+        <ui-switch height="16" aria-label="Settings"></ui-switch>
+      </div>
+      <div class="code">
+        <code>
+          <div>&lt;ui-switch height="16" aria-label="Settings"&gt;&lt;/ui-switch&gt;</div>
+        </code>
+      </div>
     </div>
   </div>
-</div>
 
-<div class="content-item">
-  <div>Checked.</div>
-  <div class="example">
-    <div class="preview">
-      <ui-switch checked aria-label="Settings"></ui-switch>
-    </div>
-    <div class="code">
-      <code>
-        <div>&lt;ui-switch checked aria-label="Settings"&gt;&lt;/ui-switch&gt;</div>
-      </code>
+  <div class="content-item">
+    <div>Height 24 (default)</div>
+    <div class="example">
+      <div class="preview">
+        <ui-switch aria-label="Settings"></ui-switch>
+      </div>
+      <div class="code">
+        <code>
+          <div>&lt;ui-switch aria-label="Settings"&gt;&lt;/ui-switch&gt;</div>
+        </code>
+      </div>
     </div>
   </div>
-</div>
 
-<div class="content-item">
-  <div>Disabled.</div>
-  <div class="example">
-    <div class="preview">
-      <ui-switch disabled aria-label="Settings"></ui-switch>
-    </div>
-    <div class="code">
-      <code>
-        <div>&lt;ui-switch disabled aria-label="Settings"&gt;&lt;/ui-switch&gt;</div>
-      </code>
+  <div class="content-item">
+    <div>Checked</div>
+    <div class="example">
+      <div class="preview">
+        <ui-switch checked aria-label="Settings"></ui-switch>
+      </div>
+      <div class="code">
+        <code>
+          <div>&lt;ui-switch checked aria-label="Settings"&gt;&lt;/ui-switch&gt;</div>
+        </code>
+      </div>
     </div>
   </div>
-</div>
 
+  <div class="content-item">
+    <div>Disabled</div>
+    <div class="example">
+      <div class="preview">
+        <ui-switch disabled aria-label="Settings"></ui-switch>
+      </div>
+      <div class="code">
+        <code>
+          <div>&lt;ui-switch disabled aria-label="Settings"&gt;&lt;/ui-switch&gt;</div>
+        </code>
+      </div>
+    </div>
+  </div>
 </section>
