--- a/pages/ui-text.html
+++ b/pages/ui-text.html
@@ -5,7 +5,7 @@
   <div class="info">
     <h2>Features</h2>
     <ul>
-      <li>Supports LTR and RTL. Default: LTR</li>
+      <li>Supports LTR and RTL. Default: LTR.</li>
       <li>The text block width is 100%.</li>
     </ul>
   </div>
