--- a/pages/ui-spinner.html
+++ b/pages/ui-spinner.html
@@ -20,7 +20,7 @@
 <section class="content">
 
   <div class="content-item">
-    <div>Default height</div>
+    <div>Default height: 24</div>
     <div class="example">
       <div class="preview">
         <ui-spinner></ui-spinner>
