--- a/pages/ui-button.html
+++ b/pages/ui-button.html
@@ -1,6 +1,6 @@
 <section class="intro">
   <h1>Button</h1>
-  <div class="description">A component that triggers an action.</div>
+  <div class="description">Buttons are used to perform actions or submit forms.</div>
   <ui-divider></ui-divider>
   <div class="info">
     <h2>Features</h2>
@@ -11,7 +11,7 @@
       <li>For a button with a single icon, use either icon-leading or icon-trailing.</li>
       <li>Font size is "button height / 2 - 2px", capped between 12px and 16px.</li>
       <li>Corner rounding is calculated as "button height / 4".</li>
-      <li>A visible outline appears on focused buttons.</li>
+      <li>A visible outline appears when the component is focused.</li>
       <li>Supports keyboard navigation: Tab to move, Enter/Space to trigger action.</li>
     </ul>
   </div>
