--- a/pages/ui-checkbox.html
+++ b/pages/ui-checkbox.html
@@ -7,7 +7,7 @@
     <ul>
       <li>Supports LTR and RTL.</li>
       <li>The following ARIA attributes are added automatically: aria-disabled and aria-checked.</li>
-      <li>A visible outline appears on focused buttons.</li>
+      <li>A visible outline appears when the component is focused.</li>
       <li>Supports keyboard navigation: Tab to move, Enter/Space to trigger action.</li>
     </ul>
   </div>
@@ -20,6 +20,8 @@
         <br>The component's height is measured in pixels. Recommended range: 16 to 24. Even values are preferred.</li>
       <li>checked - reactive, optional.
         <br>Controls the checked state of the component.</li>
+      <li>required - static, optional.
+        <br>Defines whether the component is required.</li>
       <li>disabled - reactive, optional.
         <br>Controls the disabled state of the component.</li>
       <li>shape - static, optional. Default: rounded.
@@ -63,7 +65,7 @@
   </div>
 
   <div class="content-item">
-    <div>Height 20 (default)</div>
+    <div>Default height: 20</div>
     <div class="example">
       <div class="preview">
         <ui-checkbox aria-label="Settings"></ui-checkbox>
