--- a/pages/ui-input.html
+++ b/pages/ui-input.html
@@ -1,6 +1,6 @@
 <section class="intro">
   <h1>Input</h1>
-  <div class="description">Allows users to enter and edit text.</div>
+  <div class="description">Input allows users to enter and edit text.</div>
   <ui-divider></ui-divider>
   <div class="info">
     <h2>Features</h2>
@@ -8,7 +8,7 @@
       <li>Supports LTR and RTL.</li>
       <li>Font size is "button height / 2", capped between 12px and 16px.</li>
       <li>Corner rounding is calculated as "button height / 4".</li>
-      <li>A visible outline appears on focused input.</li>
+      <li>A visible outline appears when the component is focused.</li>
     </ul>
   </div>
   <div class="info">
