--- a/pages/ui-label.html
+++ b/pages/ui-label.html
@@ -22,7 +22,7 @@
     <div>Label</div>
     <div class="example">
       <div class="preview">
-        <ui-label>Label</ui-label>
+        <ui-label text="Label"></ui-label>
       </div>
       <div class="code">
         <code>
@@ -36,7 +36,7 @@
     <div>Required</div>
     <div class="example">
       <div class="preview">
-        <ui-label required>Label</ui-label>
+        <ui-label text="Label" required></ui-label>
       </div>
       <div class="code">
         <code>
